--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!doctype html>
-<html lang="">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+<html lang="en">
+  <head></head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
